syntax = "proto3";

package auth;

option go_package = "github.com/wralith/aestimatio/server/pb/gen/auth";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message User {
  string id = 1;
  string email = 2;
  string username = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string jwt = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message RegisterResponse {
  User user = 1;
  string jwt = 2;
}

message ValidateRequest {
  string jwt = 1;
}

message ValidateResponse {
  bool valid = 1;
}